--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,65 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem
-  }
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%
-  }
+	:root {
+		--background: 0 46% 98%;
+		--foreground: 0 60% 3%;
+		--muted: 0 40% 95%;
+		--muted-foreground: 0 14% 39%;
+		--popover: 0 46% 98%;
+		--popover-foreground: 0 60% 3%;
+		--card: 0 46% 98%;
+		--card-foreground: 0 60% 3%;
+		--border: 0 4% 92%;
+		--input: 0 4% 92%;
+		--primary: 0 47% 41%;
+		--primary-foreground: 0 0% 100%;
+		--secondary: 0 18% 89%;
+		--secondary-foreground: 0 18% 29%;
+		--accent: 0 26% 83%;
+		--accent-foreground: 0 26% 23%;
+		--destructive: 19 84% 23%;
+		--destructive-foreground: 19 84% 83%;
+		--ring: 0 47% 41%;
+		--chart-1: 0 47% 41%;
+		--chart-2: 0 18% 89%;
+		--chart-3: 0 26% 83%;
+		--chart-4: 0 18% 92%;
+		--chart-5: 0 50% 41%;
+		--radius: 0.5rem;
+	}
+
+	.dark {
+		--background: 0 56% 0%;
+		--foreground: 0 39% 100%;
+		--muted: 0 40% 5%;
+		--muted-foreground: 0 14% 61%;
+		--popover: 0 56% 0%;
+		--popover-foreground: 0 39% 100%;
+		--card: 0 56% 0%;
+		--card-foreground: 0 39% 100%;
+		--border: 0 4% 15%;
+		--input: 0 4% 15%;
+		--primary: 0 47% 41%;
+		--primary-foreground: 0 0% 100%;
+		--secondary: 0 1% 17%;
+		--secondary-foreground: 0 1% 77%;
+		--accent: 0 10% 23%;
+		--accent-foreground: 0 10% 83%;
+		--destructive: 19 84% 49%;
+		--destructive-foreground: 0 0% 100%;
+		--ring: 0 47% 41%;
+		--chart-1: 0 47% 41%;
+		--chart-2: 0 1% 17%;
+		--chart-3: 0 10% 23%;
+		--chart-4: 0 1% 20%;
+		--chart-5: 0 50% 41%;
+	}
 }
+
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+	* {
+		@apply border-border;
+	}
+	body {
+		@apply bg-background text-foreground;
+	}
 }
